[package]
name = "env_dir"
version = "0.0.7"
edition = "2021"
authors = ["gcxfd <i@rmw.link>"]
license = "Apache-2.0"
description = "env_dir"
repository = "https://github.com/rmw-lib/env_dir"
readme = "README.md"
keywords = ["env_dir"]

[dependencies]
dirs = "4.0.0"

[dev-dependencies]
anyhow = "1.0.58"
criterion = "0.3.6"
rand = "0.8.5"

[profile.bench]
lto = true

[[bench]]
name = "main"
harness = false

#[[bin]]
# bench = false
# path = "src/main.rs"
# name = "env_dir"
# [profile.release]
# lto = true
# codegen-units = 1
# debug-assertions = false
# overflow-checks = false
# opt-level = 3
# panic = 'abort'
[features]
default = []
# avif = ["dep:ravif", "dep:rgb"]
#[dependencies.ravif]
#optional = true
#version = "0.6.3"
